랜덤 가위바위보 완성

--- a/section1/가위바위보게임.html
+++ b/section1/가위바위보게임.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>가위바위보</title>
-    <link rel="stylesheet" href="./js/가위바위보게임.js">
     <style>
         h1{
             font-size: 100px;
@@ -22,5 +21,6 @@
 <body>
     <button type="button" class="startBtn">리셋</button>
     <h1>가위</h1>
-</body>
+    <script src="./js/가위바위보게임.js"></script>
+  </body>
 </html>
