--- a/section1/랜덤업다운게임.html
+++ b/section1/랜덤업다운게임.html
@@ -8,6 +8,7 @@
     <style>
         body{
             height: 100vh;
+            background: linear-gradient(120deg, #0272a4, #f6a564);
         }
         .contWrap{
             position: relative;
@@ -18,6 +19,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             text-align: center;
+            border-radius: 20px 20px 20px 20px;
         }
         input{
             padding: 10px 20px;
